# Devil-bot

./: .config.py.un~  .gitignore  README.md  Requirements.txt  config.py~  logging.yaml  main.py  pyproject.toml  run.py  settings.yaml
.github/workflows/: pylint.yml  python-package.yml
bot/: bot.py  commands.py  constants.py  fucntions.py  functions.py
bot/exts/backend/: __init__.py  logging.py
bot/exts/commands/: commands.py
bot/exts/info/: __init__.py  information.py
bot/exts/moderation/: bot_control.py  messages.py
bot/rescoures/extensions/: _cogs.json
src/: bot.py  commands.py  constants.py  context.py  converter.py  voice.py
src/exts/backend/: database.py  error_handler.py  logging.py  welcome.py
src/exts/fun/: calc.py  gender.py  inspiration.py  laugh.py  memes.py  randoms.py
src/exts/info/: bot_info.py  calc.py  calculate.py  dictionary.py  information.py  search.py  short_info.py
src/exts/moderation/: bot_control.py  messages.py  owner_cog.py  volient_action.py
src/exts/moderation/owner/: cog_stuff.py  owner_cog.py  reload_cog.py
src/exts/utils/: checkers.py  converter.py  decorators.py  exceptions.py
src/exts/voice/: dcactivities.py  voice.py  youtubeWork.py
src/resource/: _cogs.json  status.json
src/resource/APIs/: filter_request.py  google.py  plant_text.py
src/resource/extensions/: _cogs.json  status.json
src/utils/: converter.py  maths.py  time.py
