[tool.poetry]
name = "Devil Bot"
version = "0.1.0"
description = "Multi-pourpose discord bot"
authors = ["Brodevil <brodevil89@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.7.4"
astroid = "2.8.5"
regex = "2021.11.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
